--- a/translations/ghost+intl-icu.en.xlf
+++ b/translations/ghost+intl-icu.en.xlf
@@ -350,7 +350,7 @@
     <unit id="T206xUy" name="Worauf warten Sie noch?">
       <notes>
         <note category="german">Worauf wartest du noch?</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/CustomAbstractController.php</note>
       </notes>
       <segment>
         <source>Worauf warten Sie noch?</source>
