--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -2017,7 +2017,7 @@
     <unit id="zlGVYh_" name="{name}'s Koalition">
       <notes>
         <note category="german">{name}'s Koalition</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Soul/SoulCoalitionController.php</note>
       </notes>
       <segment>
         <source>{name}'s Koalition</source>
@@ -2027,7 +2027,7 @@
     <unit id="j8VraNU" name="Herzlichen Glückwunsch, du bist der Koalition soeben beigetreten!">
       <notes>
         <note category="german">Herzlichen Glückwunsch, du bist der Koalition soeben beigetreten!</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Soul/SoulCoalitionController.php</note>
       </notes>
       <segment>
         <source>Herzlichen Glückwunsch, du bist der Koalition soeben beigetreten!</source>
@@ -2938,7 +2938,7 @@
       <notes>
         <note category="german">Durch deinen Weggang hast du deine Koalition soeben aufgelöst.</note>
         <note category="state">new</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Soul/SoulCoalitionController.php</note>
       </notes>
       <segment>
         <source>Durch deinen Weggang hast du deine Koalition soeben aufgelöst.</source>
