--- a/translations/global+intl-icu.en.xlf
+++ b/translations/global+intl-icu.en.xlf
@@ -404,7 +404,7 @@
     <unit id="lUcvZQo" name="Hilfe">
       <notes>
         <note category="german">Hilfe</note>
-        <note category="from">twig:///templates/ajax/ajax.html.twig;twig:///templates/ajax/ghost/create_town.html.twig;twig:///templates/ajax/soul/season.html.twig;twig:///templates/ajax/soul/refer.html.twig;twig:///templates/ajax/soul/coalitions.html.twig;twig:///templates/ajax/soul/settings.html.twig;twig:///templates/ajax/soul/me.html.twig;twig:///templates/ajax/forum/editor.html.twig;twig:///templates/ajax/public/disclaimer.html.twig;twig:///templates/ajax/pm/bubbles.html.twig;twig:///templates/ajax/game/jobs.html.twig;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/beyond/beyond.html.twig;twig:///templates/ajax/game/town/posts.html.twig;twig:///templates/ajax/game/town/home.html.twig;twig:///templates/ajax/game/town/bank.html.twig;twig:///templates/ajax/game/town/dump.html.twig;twig:///templates/ajax/game/town/town.html.twig;twig:///templates/ajax/game/town/dashboard.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
+        <note category="from">php:///src/Controller/GameController.php;php:///src/Twig/Extensions.php;twig:///templates/ajax/ajax.html.twig;twig:///templates/ajax/ghost/create_town.html.twig;twig:///templates/ajax/soul/season.html.twig;twig:///templates/ajax/soul/refer.html.twig;twig:///templates/ajax/soul/coalitions.html.twig;twig:///templates/ajax/soul/settings.html.twig;twig:///templates/ajax/soul/me.html.twig;twig:///templates/ajax/forum/editor.html.twig;twig:///templates/ajax/public/disclaimer.html.twig;twig:///templates/ajax/pm/bubbles.html.twig;twig:///templates/ajax/game/jobs.html.twig;twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/beyond/beyond.html.twig;twig:///templates/ajax/game/town/posts.html.twig;twig:///templates/ajax/game/town/home.html.twig;twig:///templates/ajax/game/town/bank.html.twig;twig:///templates/ajax/game/town/dump.html.twig;twig:///templates/ajax/game/town/town.html.twig;twig:///templates/ajax/game/town/dashboard.html.twig;twig:///templates/ajax/game/newspaper.html.twig</note>
       </notes>
       <segment>
         <source>Hilfe</source>
@@ -825,7 +825,7 @@
     <unit id="5lMuG5Z" name="Schere">
       <notes>
         <note category="german">Schere</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Schere</source>
@@ -835,7 +835,7 @@
     <unit id="eVtWA3U" name="Stein">
       <notes>
         <note category="german">Stein</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Stein</source>
@@ -845,7 +845,7 @@
     <unit id="vXPlKOG" name="Papier">
       <notes>
         <note category="german">Papier</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Papier</source>
@@ -855,7 +855,7 @@
     <unit id="l2sp7PJ" name="Kopf">
       <notes>
         <note category="german">Kopf</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Kopf</source>
@@ -865,7 +865,7 @@
     <unit id="ZU60wKO" name="Zahl">
       <notes>
         <note category="german">Zahl</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>Zahl</source>
@@ -875,7 +875,7 @@
     <unit id="ysTRqQl" name="{color} {value}">
       <notes>
         <note category="german">{color} {value}</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/HTMLService.php</note>
       </notes>
       <segment>
         <source>{color} {value}</source>
@@ -1412,7 +1412,7 @@
     <unit id="H5.W95P">
       <notes>
         <note category="german">Falls sich dieser Zustand auch um Mitternacht noch nicht geändert hat, findet kein Zombieangriff statt. Der Tag wird dann künstlich verlängert.</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/GameController.php</note>
       </notes>
       <segment>
         <source>Falls sich dieser Zustand auch um Mitternacht noch nicht geändert hat, findet kein Zombieangriff statt. Der Tag wird dann künstlich verlängert.</source>
@@ -1483,7 +1483,7 @@
     <unit id="WyLb36J" name="Deinen Rucksack umklammern">
       <notes>
         <note category="german">Deinen Rucksack umklammern</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Deinen Rucksack umklammern</source>
@@ -1493,7 +1493,7 @@
     <unit id="My.PxrH" name="Schreien">
       <notes>
         <note category="german">Schreien</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Schreien</source>
@@ -1503,7 +1503,7 @@
     <unit id="pBxprfI" name="Rotz und Wasser heulen">
       <notes>
         <note category="german">Rotz und Wasser heulen</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Rotz und Wasser heulen</source>
@@ -1513,7 +1513,7 @@
     <unit id="0GmUL4e" name="Die Zähne zusammenbeißen">
       <notes>
         <note category="german">Die Zähne zusammenbeißen</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Die Zähne zusammenbeißen</source>
@@ -1523,7 +1523,7 @@
     <unit id="VgN.Hot" name="Eine Gitarre umarmen">
       <notes>
         <note category="german">Eine Gitarre umarmen</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Eine Gitarre umarmen</source>
@@ -1533,7 +1533,7 @@
     <unit id="PeITDbg" name="Nervös weinen">
       <notes>
         <note category="german">Nervös weinen</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Nervös weinen</source>
@@ -1543,7 +1543,7 @@
     <unit id="Qi1mhHC" name="In Panik ausbrechen">
       <notes>
         <note category="german">In Panik ausbrechen</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>In Panik ausbrechen</source>
@@ -1553,7 +1553,7 @@
     <unit id="BCykX16" name="Hinter dem Wrack verstecken">
       <notes>
         <note category="german">Hinter dem Wrack verstecken</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Hinter dem Wrack verstecken</source>
@@ -1563,7 +1563,7 @@
     <unit id="ho1chRn" name="Die Tür zuhalten">
       <notes>
         <note category="german">Die Tür zuhalten</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Die Tür zuhalten</source>
@@ -1573,7 +1573,7 @@
     <unit id="7ajXkGq" name="Unter der Decke verstecken">
       <notes>
         <note category="german">Unter der Decke verstecken</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Unter der Decke verstecken</source>
@@ -1583,7 +1583,7 @@
     <unit id="F87Kxz9" name="Nach Hilfe schreien">
       <notes>
         <note category="german">Nach Hilfe schreien</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Nach Hilfe schreien</source>
@@ -1593,7 +1593,7 @@
     <unit id="UC2Xq1w" name="&quot;Hilfe&quot; schreien">
       <notes>
         <note category="german">"Hilfe" schreien</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>"Hilfe" schreien</source>
@@ -1603,7 +1603,7 @@
     <unit id="IzxXFRY" name="Unter einem Karton verstecken">
       <notes>
         <note category="german">Unter einem Karton verstecken</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Unter einem Karton verstecken</source>
@@ -1613,7 +1613,7 @@
     <unit id="68aHwRD" name="Unter dem Bett verstecken">
       <notes>
         <note category="german">Unter dem Bett verstecken</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Unter dem Bett verstecken</source>
@@ -1623,7 +1623,7 @@
     <unit id=".md5gGf" name="Ruhig bleiben...">
       <notes>
         <note category="german">Ruhig bleiben...</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Ruhig bleiben...</source>
@@ -1633,7 +1633,7 @@
     <unit id="LxIgZj7" name="In die Fötusstellung zusammenrollen">
       <notes>
         <note category="german">In die Fötusstellung zusammenrollen</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>In die Fötusstellung zusammenrollen</source>
@@ -1643,7 +1643,7 @@
     <unit id="1uUvkyM" name="Alleine laut singen">
       <notes>
         <note category="german">Alleine laut singen</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Alleine laut singen</source>
@@ -1653,7 +1653,7 @@
     <unit id="V3ZrObm" name="Um dein Leben beten">
       <notes>
         <note category="german">Um dein Leben beten</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Um dein Leben beten</source>
@@ -1663,7 +1663,7 @@
     <unit id="0HFdAAh" name="Die Backen halten">
       <notes>
         <note category="german">Die Backen halten</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/LandingController.php</note>
       </notes>
       <segment>
         <source>Die Backen halten</source>
@@ -2163,7 +2163,7 @@
       <notes>
         <note category="german">Die Seite wird von Horden von Zombies belagert!</note>
         <note category="state">new</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/ExternalXML2Controller.php</note>
       </notes>
       <segment>
         <source>Die Seite wird von Horden von Zombies belagert!</source>
@@ -2173,7 +2173,7 @@
     <unit id="2gahlEk" name="Spielhilfe:">
       <notes>
         <note category="german">Spielhilfe:</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Twig/Extensions.php</note>
       </notes>
       <segment>
         <source>Spielhilfe:</source>
@@ -2224,7 +2224,7 @@
     <unit id="BFjRnfU" name="Nachrichten des Raben">
       <notes>
         <note category="german">Nachrichten des Raben</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Messages/MessageGlobalPMController.php</note>
       </notes>
       <segment>
         <source>Nachrichten des Raben</source>
@@ -2234,7 +2234,7 @@
     <unit id="zLJ.A.A" name="Anzeigen">
       <notes>
         <note category="german">Anzeigen</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>Anzeigen</source>
@@ -2244,7 +2244,7 @@
     <unit id="NhpWriw" name="Dauerhaft">
       <notes>
         <note category="german">Dauerhaft</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>Dauerhaft</source>
@@ -2254,7 +2254,7 @@
     <unit id="Hwdoi.l" name="{n} Tage">
       <notes>
         <note category="german">{n} Tage</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>{n} Tage</source>
@@ -2264,7 +2264,7 @@
     <unit id="1E2BbPr" name="1 Tag">
       <notes>
         <note category="german">1 Tag</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>1 Tag</source>
@@ -2274,7 +2274,7 @@
     <unit id="jLGnWab" name="{n} Stunden">
       <notes>
         <note category="german">{n} Stunden</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>{n} Stunden</source>
@@ -2284,7 +2284,7 @@
     <unit id="2iHBadX" name="1 Stunde">
       <notes>
         <note category="german">1 Stunde</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>1 Stunde</source>
@@ -2294,7 +2294,7 @@
     <unit id="EJ4TXc1" name="{n} Minuten">
       <notes>
         <note category="german">{n} Minuten</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>{n} Minuten</source>
@@ -2305,7 +2305,7 @@
       <notes>
         <note category="german">1 Minute</note>
         <note category="state">new</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>1 Minute</source>
@@ -2315,7 +2315,7 @@
     <unit id="OTEy7hr" name="{n} Sekunden">
       <notes>
         <note category="german">{n} Sekunden</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>{n} Sekunden</source>
@@ -2325,7 +2325,7 @@
     <unit id="1rEgLVY" name="1 Sekunde">
       <notes>
         <note category="german">1 Sekunde</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>1 Sekunde</source>
@@ -2676,7 +2676,7 @@
       <notes>
         <note category="german">und</note>
         <note category="state">new</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/InventoryAwareController.php</note>
       </notes>
       <segment>
         <source>und</source>
@@ -2687,7 +2687,7 @@
       <notes>
         <note category="german">HINWEIS: Diese Aktion ist nur in der Stadt möglich.</note>
         <note category="state">new</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/EventSubscriber/GateKeeperSubscriber.php</note>
       </notes>
       <segment>
         <source>HINWEIS: Diese Aktion ist nur in der Stadt möglich.</source>
@@ -2698,7 +2698,7 @@
       <notes>
         <note category="german">HINWEIS: Diese Aktion ist nur in der Außenwelt möglich.</note>
         <note category="state">new</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/EventSubscriber/GateKeeperSubscriber.php</note>
       </notes>
       <segment>
         <source>HINWEIS: Diese Aktion ist nur in Übersee möglich.</source>
@@ -3181,7 +3181,7 @@
     <unit id="YNxQwvO">
       <notes>
         <note category="german">{user} hat dich geblockt und wurde daher aus der Liste der Empfänger für diese Nachricht gestrichen.</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Messages/MessageGlobalPMController.php</note>
       </notes>
       <segment>
         <source>{user} hat dich geblockt und wurde daher aus der Liste der Empfänger für diese Nachricht gestrichen.</source>
@@ -3191,7 +3191,7 @@
     <unit id="QZZefQX" name="{users} und {last_user}">
       <notes>
         <note category="german">{users} und {last_user}</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Messages/MessageGlobalPMController.php</note>
       </notes>
       <segment>
         <source>{users} und {last_user}</source>
@@ -3201,7 +3201,7 @@
     <unit id="yJCPgfF">
       <notes>
         <note category="german">{users} haben dich geblockt und wurden daher aus der Liste der Empfänger für diese Nachricht gestrichen.</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Messages/MessageGlobalPMController.php</note>
       </notes>
       <segment>
         <source>{users} haben dich geblockt und wurden daher aus der Liste der Empfänger für diese Nachricht gestrichen.</source>
@@ -3211,7 +3211,7 @@
     <unit id="tgTK6TI" name="Du hast diesen Spieler auf deine Blacklist gesetzt.">
       <notes>
         <note category="german">Du hast diesen Spieler auf deine Blacklist gesetzt.</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Soul/SoulController.php</note>
       </notes>
       <segment>
         <source>Du hast diesen Spieler auf deine Blacklist gesetzt.</source>
@@ -3221,7 +3221,7 @@
     <unit id="C4uSYMq" name="Du hast diesen Spieler von deiner Blacklist genommen.">
       <notes>
         <note category="german">Du hast diesen Spieler von deiner Blacklist genommen.</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Controller/Soul/SoulController.php</note>
       </notes>
       <segment>
         <source>Du hast diesen Spieler von deiner Blacklist genommen.</source>
