--- a/translations/mail+intl-icu.en.xlf
+++ b/translations/mail+intl-icu.en.xlf
@@ -4,7 +4,7 @@
     <unit id="M_25pDW" name="Account validieren">
       <notes>
         <note category="german">Account validieren</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/UserFactory.php</note>
       </notes>
       <segment>
         <source>Account validieren</source>
@@ -14,7 +14,7 @@
     <unit id="bGFqxj8" name="Passwort zurücksetzen">
       <notes>
         <note category="german">Passwort zurücksetzen</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/UserFactory.php</note>
       </notes>
       <segment>
         <source>Passwort zurücksetzen</source>
