Building log fix (FR)

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -268,7 +268,7 @@
       </notes>
       <segment>
         <source>Heute Nacht wurden von {building} folgende Gegenstände produziert: {items}</source>
-        <target>Le {building} a produit "{items}". Ces objets ont été placés dans la banque.</target>
+        <target>{building} a produit "{items}". Ces objets ont été placés dans la banque.</target>
       </segment>
     </unit>
     <unit id="vB3wgZU">
